# first-cv

./: CMakeLists.txt  FirstCV.kdev4  README.md  applicationexceptions.h  basecv.cpp  basecv.h  firstcv.cpp  firstcv.h  firstgreyscale.cpp  firstgreyscale.h  main.cpp  renderimage.cpp  renderimage.h  rendervideo.cpp  rendervideo.h  scanimage.cpp  scanimage.h
.kdev4/: FirstCV.kdev4
